--- a/www/index.html
+++ b/www/index.html
@@ -25,16 +25,17 @@
     <script src="js/app.js"></script>
     <script src="views/login/login.js"></script>
     <script src="views/dashboard/dashboard.js"></script>
+    <script src="views/my/my.js"></script>
 
   </head>
   <body ng-app="starter">
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+      <ion-nav-bar class="bar-stable">
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+      </ion-nav-bar>
+
+      <ion-nav-view></ion-nav-view>
+
   </body>
 </html>
